--- a/week7/homework7.ipynb
+++ b/week7/homework7.ipynb
@@ -774,10 +774,10 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "thets all"
+   ],
    "metadata": {
     "collapsed": false
    }
