--- a/week7/Simpsons/Simpsons_saturn.ipynb
+++ b/week7/Simpsons/Simpsons_saturn.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "os.environ['KAGGLE_USERNAME']=\"andrejilin\"\n",
-    "os.environ['KAGGLE_KEY']=\"8997291975dbe559906995dfd85eda9b\""
+    "os.environ['KAGGLE_KEY']=\"...\""
    ]
   },
   {
