--- a/week9/homework_9.ipynb
+++ b/week9/homework_9.ipynb
@@ -30,27 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# !wget https://github.com/SVizor42/ML_Zoomcamp/releases/download/dino-dragon-model/dino_dragon_10_0.899.h5 -O model_dino_dragon.h5"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "'2.11.0'"
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "model = keras.models.load_model('model_dino_dragon.h5')"
@@ -109,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stderr",
@@ -122,18 +119,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\DS_PC\\AppData\\Local\\Temp\\tmp4wzwuy30\\assets\n"
+      "INFO:tensorflow:Assets written to: C:\\Users\\DS_PC\\AppData\\Local\\Temp\\tmpvhi8w8zt\\assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\DS_PC\\AppData\\Local\\Temp\\tmp4wzwuy30\\assets\n"
+      "INFO:tensorflow:Assets written to: C:\\Users\\DS_PC\\AppData\\Local\\Temp\\tmpvhi8w8zt\\assets\n"
      ]
     }
    ],
    "source": [
+    "# convert keras to TF-Lite\n",
     "converter = tf.lite.TFLiteConverter.from_keras_model(model)\n",
     "\n",
     "tflite_model = converter.convert()"
@@ -144,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "with open('model_dino_dragon.tflite', 'wb') as f_out:\n",
@@ -156,16 +154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "total 129M\n",
-      "-rw-r--r-- 1 DS_PC 197121 13K Nov 22 19:51 homework_9.ipynb\n",
-      "-rw-r--r-- 1 DS_PC 197121 86M Nov 22 18:44 model_dino_dragon.h5\n",
-      "-rw-r--r-- 1 DS_PC 197121 43M Nov 22 19:48 model_dino_dragon.tflite\n"
+      "drwxr-xr-x 1 DS_PC 197121    0 Nov 26 17:15 __pycache__\n",
+      "-rw-r--r-- 1 DS_PC 197121  292 Nov 26 11:44 Dockerfile\n",
+      "-rw-r--r-- 1 DS_PC 197121  16K Nov 28 14:50 homework_9.ipynb\n",
+      "-rw-r--r-- 1 DS_PC 197121 1.4K Nov 26 17:01 lambda_function.py\n",
+      "-rw-r--r-- 1 DS_PC 197121  86M Nov 22 18:44 model_dino_dragon.h5\n",
+      "-rw-r--r-- 1 DS_PC 197121  43M Nov 28 14:50 model_dino_dragon.tflite\n",
+      "-rw-r--r-- 1 DS_PC 197121 9.0K Nov 26 17:16 test.ipynb\n",
+      "-rw-r--r-- 1 DS_PC 197121  264 Nov 26 17:12 test.py\n"
      ]
     }
    ],
@@ -208,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "import tensorflow.lite as tflite"
@@ -219,11 +222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "interpreter = tflite.Interpreter(model_path='model_dino_dragon.tflite')\n",
-    "interpreter.allocate_tensors()"
+    "interpreter.allocate_tensors()  # download wights"
    ],
    "metadata": {
     "collapsed": false
@@ -231,7 +234,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[{'name': 'serving_default_conv2d_input:0',\n  'index': 0,\n  'shape': array([  1, 150, 150,   3]),\n  'shape_signature': array([ -1, 150, 150,   3]),\n  'dtype': numpy.float32,\n  'quantization': (0.0, 0),\n  'quantization_parameters': {'scales': array([], dtype=float32),\n   'zero_points': array([], dtype=int32),\n   'quantized_dimension': 0},\n  'sparsity_parameters': {}}]"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interpreter.get_input_details()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "input_index = interpreter.get_input_details()[0]['index']"
@@ -242,7 +265,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[{'name': 'StatefulPartitionedCall:0',\n  'index': 13,\n  'shape': array([1, 1]),\n  'shape_signature': array([-1,  1]),\n  'dtype': numpy.float32,\n  'quantization': (0.0, 0),\n  'quantization_parameters': {'scales': array([], dtype=float32),\n   'zero_points': array([], dtype=int32),\n   'quantized_dimension': 0},\n  'sparsity_parameters': {}}]"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interpreter.get_output_details()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "output_index = interpreter.get_output_details()[0]['index']"
@@ -257,9 +300,7 @@
     "## Preparing the image\n",
     "\n",
     "You'll need some code for downloading and resizing images. You can use\n",
-    "this code:\n",
-    "\n",
-    "```python"
+    "this code:\n"
    ],
    "metadata": {
     "collapsed": false
@@ -268,13 +309,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "from io import BytesIO\n",
     "from urllib import request\n",
     "\n",
     "from PIL import Image\n",
+    "\n",
     "\n",
     "def download_image(url):\n",
     "    with request.urlopen(url) as resp:\n",
@@ -317,8 +359,17 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "target size must be 150, 150"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "url = \"https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/Smaug_par_David_Demaret.jpg/1280px-Smaug_par_David_Demaret.jpg\"\n",
@@ -330,51 +381,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DS_PC\\AppData\\Local\\Temp\\ipykernel_6728\\1222325884.py:17: DeprecationWarning: NEAREST is deprecated and will be removed in Pillow 10 (2023-07-01). Use Resampling.NEAREST or Dither.NONE instead.\n",
+      "C:\\Users\\DS_PC\\AppData\\Local\\Temp\\ipykernel_2720\\2218159536.py:18: DeprecationWarning: NEAREST is deprecated and will be removed in Pillow 10 (2023-07-01). Use Resampling.NEAREST or Dither.NONE instead.\n",
       "  img = img.resize(target_size, Image.NEAREST)\n"
      ]
     }
    ],
    "source": [
-    "img = prepare_image(img, (299, 299))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[[137,  81,  46],\n        [149,  91,  53],\n        [147,  88,  48],\n        ...,\n        [ 16,   8,   5],\n        [ 21,   5,   5],\n        [ 29,  13,  13]],\n\n       [[131,  75,  38],\n        [147,  89,  52],\n        [143,  83,  46],\n        ...,\n        [ 22,  12,  10],\n        [ 20,   4,   4],\n        [ 23,   7,   7]],\n\n       [[129,  74,  35],\n        [138,  79,  45],\n        [149,  89,  53],\n        ...,\n        [ 20,   9,   7],\n        [ 27,  11,  11],\n        [ 25,   9,   9]],\n\n       ...,\n\n       [[118,  83,  63],\n        [170, 136,  99],\n        [ 98,  57,  89],\n        ...,\n        [ 94,  48,  12],\n        [ 96,  51,  12],\n        [ 66,  18,   0]],\n\n       [[141, 186, 163],\n        [105, 125,  53],\n        [ 87, 134,  54],\n        ...,\n        [ 80,  35,   0],\n        [ 91,  50,   6],\n        [ 83,  39,  14]],\n\n       [[ 92, 124,  74],\n        [ 99,  96,  81],\n        [ 99, 108,  77],\n        ...,\n        [ 67,  28,  11],\n        [ 74,  27,  11],\n        [ 79,  32,  16]]], dtype=uint8)"
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = np.array(img)\n",
-    "x."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [],
-   "source": [
-    " X = np.array([x])"
+    "img = prepare_image(img, (150, 150))"
    ],
    "metadata": {
     "collapsed": false
@@ -403,9 +422,49 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "answer: 0.5529412"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "outputs": [],
+   "source": [
+    "x = np.array(img)\n",
+    "X = np.array([x])\n",
+    "X_r = np.float32(X / 255.0)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.5529412"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_r[0][0][0][0]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {
     "collapsed": false
@@ -431,9 +490,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "outputs": [],
-   "source": [],
+   "source": [
+    "answer: 0.82448614"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "interpreter.set_tensor(input_index, X_r)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[0.82448614]], dtype=float32)"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interpreter.invoke()\n",
+    "interpreter.get_tensor(output_index)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "preds = interpreter.get_tensor(output_index)"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -445,6 +549,8 @@
     "\n",
     "Now you need to copy all the code into a separate python file. You will\n",
     "need to use this file for the next two questions.\n",
+    "\n",
+    "    '$ jupyter nbconvert --to script [YOUR_NOTEBOOK].ipynb'\n",
     "\n",
     "Tip: you can test this file locally with `ipython` or Jupyter Notebook\n",
     "by importing the file and invoking the function from this file.\n",
@@ -481,15 +587,6 @@
    "outputs": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "## Question 5\n",
@@ -508,13 +605,45 @@
    ],
    "metadata": {
     "collapsed": false
-   },
-   "outputs": []
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REPOSITORY                              TAG          IMAGE ID       CREATED       SIZE\n",
+      "tf-lite-lambda                          3.9-v2.6.2   17315431e723   2 days ago    735MB\n",
+      "dino_vs_dragon                          latest       c626b0c8bf0e   2 days ago    735MB\n",
+      "dino_dragon                             latest       c68bd8cf00bd   4 days ago    775MB\n",
+      "svizor42/zoomcamp-dino-dragon-lambda    v2           20ef58b21a05   10 days ago   639MB\n",
+      "zoomcamp-test                           latest       4755616a5ad0   2 weeks ago   1.1GB\n",
+      "cr.yandex/c626b0c8bf0e/dino_vs_dragon   latest       a8780b506fa4   3 weeks ago   77.8MB\n",
+      "ubuntu                                  latest       a8780b506fa4   3 weeks ago   77.8MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "!docker images"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "answer: 639MB"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {
     "collapsed": false
@@ -552,9 +681,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'url': 'https://upload.wikimedia.org/wikipedia/en/e/e9/GodzillaEncounterModel.jpg'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connection.py\", line 174, in _new_conn\n",
+      "    conn = connection.create_connection(\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\util\\connection.py\", line 95, in create_connection\n",
+      "    raise err\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\util\\connection.py\", line 85, in create_connection\n",
+      "    sock.connect(sa)\n",
+      "ConnectionRefusedError: [WinError 10061] Подключение не установлено, т.к. конечный компьютер отверг запрос на подключение\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connectionpool.py\", line 703, in urlopen\n",
+      "    httplib_response = self._make_request(\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connectionpool.py\", line 398, in _make_request\n",
+      "    conn.request(method, url, **httplib_request_kw)\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connection.py\", line 239, in request\n",
+      "    super(HTTPConnection, self).request(method, url, body=body, headers=headers)\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\http\\client.py\", line 1256, in request\n",
+      "    self._send_request(method, url, body, headers, encode_chunked)\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\http\\client.py\", line 1302, in _send_request\n",
+      "    self.endheaders(body, encode_chunked=encode_chunked)\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\http\\client.py\", line 1251, in endheaders\n",
+      "    self._send_output(message_body, encode_chunked=encode_chunked)\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\http\\client.py\", line 1011, in _send_output\n",
+      "    self.send(msg)\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\http\\client.py\", line 951, in send\n",
+      "    self.connect()\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connection.py\", line 205, in connect\n",
+      "    conn = self._new_conn()\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connection.py\", line 186, in _new_conn\n",
+      "    raise NewConnectionError(\n",
+      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x0000013B818496D0>: Failed to establish a new connection: [WinError 10061] Подключение не установлено, т.к. конечный компьютер отверг запрос на подключение\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\requests\\adapters.py\", line 489, in send\n",
+      "    resp = conn.urlopen(\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connectionpool.py\", line 787, in urlopen\n",
+      "    retries = retries.increment(\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\util\\retry.py\", line 592, in increment\n",
+      "    raise MaxRetryError(_pool, url, error or ResponseError(cause))\n",
+      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='localhost', port=8080): Max retries exceeded with url: /2015-03-31/functions/function/invocations (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x0000013B818496D0>: Failed to establish a new connection: [WinError 10061] Подключение не установлено, т.к. конечный компьютер отверг запрос на подключение'))\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \".\\test.py\", line 9, in <module>\n",
+      "    result = requests.post(url, json=data).json()\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\requests\\api.py\", line 115, in post\n",
+      "    return request(\"post\", url, data=data, json=json, **kwargs)\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\requests\\api.py\", line 59, in request\n",
+      "    return session.request(method=method, url=url, **kwargs)\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\requests\\sessions.py\", line 587, in request\n",
+      "    resp = self.send(prep, **send_kwargs)\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\requests\\sessions.py\", line 701, in send\n",
+      "    r = adapter.send(request, **kwargs)\n",
+      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\requests\\adapters.py\", line 565, in send\n",
+      "    raise ConnectionError(e, request=request)\n",
+      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='localhost', port=8080): Max retries exceeded with url: /2015-03-31/functions/function/invocations (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x0000013B818496D0>: Failed to establish a new connection: [WinError 10061] Подключение не установлено, т.к. конечный компьютер отверг запрос на подключение'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python .\\test.py"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -621,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "outputs": [],
    "source": [],
    "metadata": {
