--- a/week9/homework_9.ipynb
+++ b/week9/homework_9.ipynb
@@ -681,80 +681,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'url': 'https://upload.wikimedia.org/wikipedia/en/e/e9/GodzillaEncounterModel.jpg'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connection.py\", line 174, in _new_conn\n",
-      "    conn = connection.create_connection(\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\util\\connection.py\", line 95, in create_connection\n",
-      "    raise err\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\util\\connection.py\", line 85, in create_connection\n",
-      "    sock.connect(sa)\n",
-      "ConnectionRefusedError: [WinError 10061] Подключение не установлено, т.к. конечный компьютер отверг запрос на подключение\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connectionpool.py\", line 703, in urlopen\n",
-      "    httplib_response = self._make_request(\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connectionpool.py\", line 398, in _make_request\n",
-      "    conn.request(method, url, **httplib_request_kw)\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connection.py\", line 239, in request\n",
-      "    super(HTTPConnection, self).request(method, url, body=body, headers=headers)\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\http\\client.py\", line 1256, in request\n",
-      "    self._send_request(method, url, body, headers, encode_chunked)\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\http\\client.py\", line 1302, in _send_request\n",
-      "    self.endheaders(body, encode_chunked=encode_chunked)\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\http\\client.py\", line 1251, in endheaders\n",
-      "    self._send_output(message_body, encode_chunked=encode_chunked)\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\http\\client.py\", line 1011, in _send_output\n",
-      "    self.send(msg)\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\http\\client.py\", line 951, in send\n",
-      "    self.connect()\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connection.py\", line 205, in connect\n",
-      "    conn = self._new_conn()\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connection.py\", line 186, in _new_conn\n",
-      "    raise NewConnectionError(\n",
-      "urllib3.exceptions.NewConnectionError: <urllib3.connection.HTTPConnection object at 0x0000013B818496D0>: Failed to establish a new connection: [WinError 10061] Подключение не установлено, т.к. конечный компьютер отверг запрос на подключение\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\requests\\adapters.py\", line 489, in send\n",
-      "    resp = conn.urlopen(\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\connectionpool.py\", line 787, in urlopen\n",
-      "    retries = retries.increment(\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\urllib3\\util\\retry.py\", line 592, in increment\n",
-      "    raise MaxRetryError(_pool, url, error or ResponseError(cause))\n",
-      "urllib3.exceptions.MaxRetryError: HTTPConnectionPool(host='localhost', port=8080): Max retries exceeded with url: /2015-03-31/functions/function/invocations (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x0000013B818496D0>: Failed to establish a new connection: [WinError 10061] Подключение не установлено, т.к. конечный компьютер отверг запрос на подключение'))\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \".\\test.py\", line 9, in <module>\n",
-      "    result = requests.post(url, json=data).json()\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\requests\\api.py\", line 115, in post\n",
-      "    return request(\"post\", url, data=data, json=json, **kwargs)\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\requests\\api.py\", line 59, in request\n",
-      "    return session.request(method=method, url=url, **kwargs)\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\requests\\sessions.py\", line 587, in request\n",
-      "    resp = self.send(prep, **send_kwargs)\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\requests\\sessions.py\", line 701, in send\n",
-      "    r = adapter.send(request, **kwargs)\n",
-      "  File \"C:\\Users\\DS_PC\\anaconda3\\lib\\site-packages\\requests\\adapters.py\", line 565, in send\n",
-      "    raise ConnectionError(e, request=request)\n",
-      "requests.exceptions.ConnectionError: HTTPConnectionPool(host='localhost', port=8080): Max retries exceeded with url: /2015-03-31/functions/function/invocations (Caused by NewConnectionError('<urllib3.connection.HTTPConnection object at 0x0000013B818496D0>: Failed to establish a new connection: [WinError 10061] Подключение не установлено, т.к. конечный компьютер отверг запрос на подключение'))\n"
+      "{'errorMessage': \"Could not open 'model_dino_dragon.tflite'.\", 'errorType': 'ValueError', 'requestId': '5b8e27ff-d0dc-4ef7-a2a4-5b12caab07a0', 'stackTrace': ['  File \"/var/task/lambda_function.py\", line 54, in lambda_handler\\n    result = predict(event[\\'url\\'])\\n', '  File \"/var/task/lambda_function.py\", line 36, in predict\\n    interpreter = tflite.Interpreter(model_path=MODEL_PATH)\\n', '  File \"/var/lang/lib/python3.9/site-packages/tensorflow/lite/python/interpreter.py\", line 455, in __init__\\n    _interpreter_wrapper.CreateWrapperFromFile(\\n']}\n"
      ]
     }
    ],
