--- a/capstone1/train.ipynb
+++ b/capstone1/train.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-12-14 10:49:58.708145: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2022-12-14 14:32:09.657867: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-12-14 14:32:09.834186: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-12-14 14:32:09.834219: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2022-12-14 14:32:11.076315: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-12-14 14:32:11.076481: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2022-12-14 14:32:11.076499: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
       "UsageError: Line magic function `%` not found.\n"
      ]
     }
@@ -375,11 +381,256 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Downlowd weight train model"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.applications.xception import preprocess_input\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-14 14:32:24.743935: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-12-14 14:32:24.743975: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2022-12-14 14:32:24.744005: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (bi): /proc/driver/nvidia/version does not exist\n",
+      "2022-12-14 14:32:24.744342: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = keras.models.load_model('model_v1_07_0.936.h5')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "path = './archive/'\n",
+    "valid_path = path + 'valid'"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 560 images belonging to 70 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_generator = ImageDataGenerator(rescale=1 / 255, validation_split=0.2)\n",
+    "valid_dataset = image_generator.flow_from_directory(batch_size=32,\n",
+    "                                                    directory=valid_path,\n",
+    "                                                    shuffle=True,\n",
+    "                                                    target_size=(224, 224),\n",
+    "                                                    subset=\"training\",\n",
+    "                                                    class_mode='categorical')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "outputs": [],
+   "source": [
+    "classes = valid_dataset.class_indices"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "outputs": [],
+   "source": [
+    "classes = list(classes.keys())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'Doberman'"
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classes[34]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
+    "img = load_img(valid_path + '/Doberman/01.jpg', target_size=(224, 224))\n",
+    "\n",
+    "x = np.array(img)\n",
+    "X = np.array([x])\n",
+    "\n",
+    "X = preprocess_input(X)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 1s 1s/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "preds = model.predict(X)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[3.26452398e-04, 1.54071575e-04, 6.81962876e-04, 1.48676068e-03,\n        4.05466650e-04, 2.87278119e-04, 7.64562283e-05, 2.57135544e-04,\n        8.50545985e-05, 4.94897540e-05, 1.58495488e-04, 1.91994113e-05,\n        2.68184114e-04, 1.16508093e-03, 6.50917209e-05, 2.88537849e-04,\n        1.38270698e-04, 1.42297358e-04, 1.15492483e-04, 4.00304882e-04,\n        1.64067475e-04, 1.41274984e-04, 8.49087228e-05, 2.23600597e-04,\n        4.72032407e-05, 8.55934413e-05, 1.17414871e-04, 1.32862842e-04,\n        1.19000644e-04, 4.87633006e-05, 1.11601999e-04, 3.91942624e-04,\n        1.86725185e-04, 2.01564078e-04, 9.50142205e-01, 8.08477271e-05,\n        5.93310942e-05, 9.84369195e-04, 9.55820506e-05, 1.65997574e-03,\n        4.57625974e-05, 7.00594566e-04, 1.26490457e-04, 1.17975185e-04,\n        3.21534870e-04, 8.66322953e-05, 1.83436423e-04, 1.03560364e-04,\n        2.35696789e-03, 1.36824761e-04, 5.48545853e-04, 1.49213709e-04,\n        6.52492396e-04, 9.82318670e-05, 1.04488427e-04, 6.00930245e-04,\n        2.19527064e-04, 5.86612878e-05, 7.55557630e-05, 4.75039147e-03,\n        2.33621243e-02, 4.52625427e-05, 9.82915168e-04, 1.71222549e-04,\n        4.75348170e-05, 1.32095694e-04, 2.22984323e-04, 1.87920319e-04,\n        1.47535314e-03, 2.84727343e-04]], dtype=float32)"
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([60, 34])"
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ind = np.argpartition(preds[0], -2)[-2:]\n",
+    "ind"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.02336212, 0.9501422 ], dtype=float32)"
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds[0][ind]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doberman\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in ind:\n",
+    "    if np.diff(preds[0][ind]) < 0.3: # if half - breed\n",
+    "        print(classes[i], preds[0][i])\n",
+    "    else:\n",
+    "        print(classes[np.argmax(preds[0])])\n",
+    "        break"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
